# boardgame-rules-RAG

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PHASE1B_COMPLETE.md  PHASE1_COMPLETE.md  PHASE2A_COMPLETE.md  PHASE2B_COMPLETE.md  PHASE3_COMPLETE.md  README.md  pyproject.toml
api/: feedback.py  main.py
cache/: semantic_cache.py
conversation/: session_manager.py
docs/: phase4-frontend-deploy.md  postgresql-migration.md
docs/superpowers/plans/: 2026-04-07-boardgame-oracle-phase1.md  2026-04-08-phase4-frontend-deploy.md
evaluation/: eval_runner.py
evaluation/golden_dataset/: catan.json  fcm.json  speakeasy.json  splendor.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  constants.ts  index.css  test-setup.ts  types.ts
frontend/src/__tests__/: App.test.tsx  useChat.test.ts
frontend/src/hooks/: useChat.ts
generation/: generator.py
ingestion/: chunker.py  kb_builder.py  pdf_parser.py
ingestion/cache/: catan_bm25.pkl  fcm_bm25.pkl  speakeasy_bm25.pkl  splendor_bm25.pkl
query_logging/: query_logger.py
retrieval/: hybrid_search.py  multi_hop.py  query_rewriter.py  reranker.py
routing/: game_config.py  tier_router.py
tests/: test_api.py  test_chunker.py  test_citation_verifier.py  test_cross_game.py  test_eval_runner.py  test_generator.py  test_hybrid_search.py  test_multi_hop.py  test_multi_hop_3hop.py  test_query_logger.py  test_query_rewriter.py  test_reranker.py  test_semantic_cache.py  test_session_manager.py  test_tier_router.py
verification/: citation_verifier.py
(+6 files in other folders)
