[project]
name = "boardgame-oracle"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pinecone>=5.0.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "tiktoken>=0.7.0",
    "llama-parse>=0.5.0",
    "pymupdf>=1.24.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0", "pytest>=8.0.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests", "evaluation"]
